20131107
- RibbonGenerator: fix caster trip option so that it now works.
- RibbonGenerator: add <stN> command that inserts fixed space
   until the line is at N units. Useful for simple tables.

20130918
- RibbonGenerator: improve standalone performance by
   spawning RibbonGenerator server in child process. Also,
   failures during startup are logged in Console.
- RibbonGenerator: tight lines on partial words no longer
   add incorrect sorts to the line.

20130911
- MCA Editor: add printable PDF view.
- Ribbon Generator: remove windows UTF8 byte order mark (BOM)
   from ribbon input, which was causing suprious "invalid
   activator" warnings.
- Ribbon Generator: allow ribbon configs to be re-saved.
- MCA Editor: allow shared MCAs to be downloaded and printed.

20130908
- Caster Controller: Resized screen and buttons for ease of 
   use in foundry.
- Caster Controller: Pin Control is now a drawer, and has an 
   easy access button on the main screen.
- Caster Controller: Forward/Backward/Beginning buttons are 
   always enabled once a ribbon is started.
- Caster Controller: Added Start Pump/Stop Pump and Deliver 
   line buttons.
- Caster Controller: Added new preference (on by default) 
    that enables automatic stopping/starting of the pump when
    the ribbon is started and stopped.
- Caster Controller: Added "Lines in Job" drawer that shows 
    the lines in the job, with the current line highlighted.
- Caster Controller: Fixed an "off by 1" error that caused 
    the user interface to suggest the ribbon was 1 line 
    longer than it actually was.

20130830
- Ribbon Generator: add Small Caps to punctuation 
   substitution list and expand punctuation subset.
- Ribbon Generator: check that mould blade isn't drawn too far.
- Ribbon Generator: fix caster trip option (add to actual last
   line.)

20130826
- Ribbon Generator: ensure at least one justifying space
   is present on a line when quadding out, in order to 