@@ -187,12 +187,12 @@ dojo.declare(
 //  			alerta("matdev: " + matdef);
     			if(!matdef || !matdef.childNodes || matdef.childNodes.length!=1) 
     			{ 
-    				this._setIsEmpty();
     				this.lowSetStyle(this.default_style);
     				this._set_width = this.default_set_width;
     				this._series = this.default_series;
     				this._size = this.default_size;
     				//alert("default set width: " + this.default_set_width);
+    				this._setIsSort();
     				return;
     			}
 
@@ -242,9 +242,11 @@ dojo.declare(
     			  this._setIsFS();
     			else
     			  this._setIsSort();
+
     		},
     
     
+    setPopup: function(popup) { this.popup = popup; },
     finished: function()
     {
 			  dijit.popup.close(this.popup); 
@@ -256,8 +258,9 @@ dojo.declare(
 		_onDoCancel: function()
 		{
 			this.onCancel(this);
+//alert("oncancelled.");
 			dijit.popup.close(this.popup); 
-//			alewr();
+//alert("closed.");
 			this.popup.destroyRecursive(true);
 		},
 		
@@ -328,7 +331,7 @@ dojo.declare(
 				_setIsSort: function() {
 					this.sortradio._clicked();// = true;
 					this._onClickSortRadio();
-					this.low_set_is_sort();
+					//this.low_set_is_sort();
 				},
 
 				low_set_is_sort: function() {
@@ -336,6 +339,7 @@ dojo.declare(
 					this.setbox.setValue(this._set_width);
 					this.charbox.setValue(this._character||"");
 					this._mat_type = "SORT";
+					dijit.focus(this.charbox.focusNode);
 				},
 
 		onCancel: function(){},
@@ -422,6 +426,7 @@ dojo.declare(
 
 				encode: function(text)
 		                {
+				  if(!text) return '';
 		                  var textneu = text.replace(/%/,"%25");
 		                  textneu = textneu.replace(/\+/,"%2B");
 				  textneu = textneu.replace(/&/,"%26amp;");
@@ -446,14 +451,14 @@ dojo.declare(
 
 			"<table>" +
 			"<tr><td>Sort: </td><td>" +
-			"<input style=\"width:45px\" maxLength=\"5\" required=\"true\" dojoType=\"dijit.form.ValidationTextBox\" dojoAttachPoint='charbox,focusNode' name=\"char${name}\"\n\tdojoAttachEvent='onChange:setChar'\n\tautocomplete=\"off\" type=\"string\"\n\t/>" + 
+			"<input style='width:45px' maxLength='5' required='true' dojoType='dijit.form.TextBox' dojoAttachPoint='charbox,focusNode' name='char${name}' dojoAttachEvent='onChange:setChar' autocomplete='off' type='string' selectOnClick='true'/>" + 
 			" <select style=\"width:120px\" dojoType=\"dijit.form.FilteringSelect\" hasDownArrow=\"true\" autoComplete=\"false\" dojoAttachEvent='onChange:setStyle' dojoAttachPoint='stylebox'>"+
 			"<option value='Roman'>Roman</option><option value='Underline'>Underline</option><option value='Italic'>Italic</option><option value='Bold'>Bold</option><option value='SmallCap'>SmallCap</option></select>" +
 			"</td></tr><tr><td>" + 
 			"Activator Key: </td><td>" +
-			"<input style=\"width:45px\" maxLength=\"6\" required=\"true\" dojoType=\"dijit.form.ValidationTextBox\" dojoAttachPoint='actbox,focusNode' name=\"act${name}\"\n\tdojoAttachEvent='onChange:setAct'\n\tautocomplete=\"off\" type=\"${type}\"\n\t/>" + 
+			"<input style=\"width:45px\" maxLength=\"6\" required=\"true\" dojoType=\"dijit.form.ValidationTextBox\" dojoAttachPoint='actbox,focusNode' name=\"act${name}\"\n\tdojoAttachEvent='onChange:setAct'\n\tautocomplete=\"off\" type=\"${type}\" selectOnClick='true'\n\t/>" + 
 			"</td></tr><tr><td>Unit Width: </td><td>" +
-			"<input style=\"width:45px\" maxLength=\"5\" required=\"true\" dojoType=\"dijit.form.NumberTextBox\" dojoAttachPoint='setbox' constraints=\"{min: 3, max: 21}\" name=\"set${name}\"\n\tdojoAttachEvent='onChange:setSet'\n\tautocomplete=\"off\" type=\"${type}\"\n\t/>" + 
+			"<input style=\"width:45px\" maxLength=\"5\" required=\"true\" dojoType=\"dijit.form.NumberTextBox\" dojoAttachPoint='setbox' constraints=\"{min: 3, max: 21, pattern: '0.0'}\" name=\"set${name}\"\n\tdojoAttachEvent='onChange:setSet'\n\tautocomplete=\"off\" type=\"${type}\" selectOnClick='true'\n\t/>" + 
 			"</td></tr></table>" +	
 
 			"</div>\n" +
